--- a/src/main/resources/reports/Pvcont.jrxml
+++ b/src/main/resources/reports/Pvcont.jrxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2022-11-08T14:51:14 -->
-<jasperReport xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns="http://jasperreports.sourceforge.net/jasperreports"
-              xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd"
-              name="PvAccident1" pageWidth="555" pageHeight="802" columnWidth="555" leftMargin="0" rightMargin="0"
-              topMargin="0" bottomMargin="0" uuid="13e9aea8-8ee7-47f8-8fa7-5cbf8a3c5c8f">
+<!-- Created with Jaspersoft Studio version 6.20.0.final using JasperReports Library version 6.20.0-2bc7ab61c56f459e8176eb05c7705e145cd400ad  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PvAccident1" pageWidth="555" pageHeight="802" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="13e9aea8-8ee7-47f8-8fa7-5cbf8a3c5c8f">
     <property name="com.jaspersoft.studio.data.sql.tables" value=""/>
     <property name="com.jaspersoft.studio.data.defaultdataadapter" value="SecRoutiereV0"/>
+    <property name="ireport.jasperserver.url" value="http://localhost:8081/jasperserver/"/>
+    <property name="ireport.jasperserver.user" value="jasperadmin"/>
+    <property name="ireport.jasperserver.report.resource" value="/reports/Pvcont_files/main_jrxml"/>
+    <property name="ireport.jasperserver.reportUnit" value="/reports/Pvcont"/>
     <queryString language="SQL">
         <![CDATA[Select
 p.pvaccid_id,
@@ -60,7 +59,7 @@ u.unite_name]]>
                     <rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
                 </box>
                 <textElement>
-                    <font fontName="Arial" size="25" isBold="true"/>
+                    <font fontName="DejaVu Sans Mono" size="25" isBold="true"/>
                 </textElement>
                 <text><![CDATA[محضر معاينة حادث مرور]]></text>
             </staticText>
@@ -77,63 +76,63 @@ u.unite_name]]>
     <detail>
         <band height="607" splitType="Stretch">
             <staticText>
-                <reportElement x="436" y="10" width="100" height="30" uuid="c9859567-cad7-4632-9628-03571f13a092"/>
+                <reportElement x="436" y="30" width="100" height="30" uuid="c9859567-cad7-4632-9628-03571f13a092"/>
                 <textElement textAlignment="Right">
-                    <font fontName="Arial" size="18" isBold="true"/>
+                    <font fontName="DejaVu Sans Mono" size="14" isBold="true"/>
                 </textElement>
                 <text><![CDATA[عدد المحضر]]></text>
             </staticText>
             <textField>
-                <reportElement x="436" y="50" width="100" height="30" uuid="7aa4e365-6108-4c85-bb5d-1b7100844b16"/>
+                <reportElement x="436" y="70" width="100" height="30" uuid="7aa4e365-6108-4c85-bb5d-1b7100844b16"/>
                 <textElement textAlignment="Right">
                     <font fontName="Arial" size="18" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$F{pvnum}]]></textFieldExpression>
             </textField>
             <staticText>
-                <reportElement x="319" y="10" width="100" height="30" uuid="eb148da4-afac-4c57-b174-0f56ef3d3970"/>
-                <textElement textAlignment="Right">
-                    <font fontName="Arial" size="18" isBold="true"/>
+                <reportElement x="319" y="30" width="100" height="30" uuid="eb148da4-afac-4c57-b174-0f56ef3d3970"/>
+                <textElement textAlignment="Center">
+                    <font fontName="DejaVu Sans Mono" size="14" isBold="true"/>
                 </textElement>
                 <text><![CDATA[عدد البرقية]]></text>
             </staticText>
             <textField>
-                <reportElement x="319" y="50" width="100" height="30" uuid="0fda1347-674b-4539-9690-6987b10ee43a"/>
+                <reportElement x="319" y="70" width="100" height="30" uuid="0fda1347-674b-4539-9690-6987b10ee43a"/>
                 <textElement textAlignment="Right">
                     <font fontName="Arial" size="18" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$F{numbarquia}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="208" y="50" width="100" height="30" uuid="dbc2af55-a445-4040-b6ab-def7efd720ad"/>
+                <reportElement x="190" y="60" width="100" height="30" uuid="dbc2af55-a445-4040-b6ab-def7efd720ad"/>
                 <textElement textAlignment="Right">
                     <font fontName="Arial" size="18" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$F{date_pv}]]></textFieldExpression>
             </textField>
             <staticText>
-                <reportElement x="208" y="10" width="100" height="30" uuid="b2c8abf0-4456-4249-92b6-0f5d86706211"/>
-                <textElement textAlignment="Right">
-                    <font fontName="Arial" size="18" isBold="true"/>
+                <reportElement x="180" y="30" width="128" height="30" uuid="b2c8abf0-4456-4249-92b6-0f5d86706211"/>
+                <textElement textAlignment="Center">
+                    <font fontName="DejaVu Sans Mono" size="14" isBold="true"/>
                 </textElement>
                 <text><![CDATA[تاريخ المحضر]]></text>
             </staticText>
             <staticText>
-                <reportElement x="90" y="10" width="100" height="30" uuid="c90f97af-2b01-4923-9175-b2cf4ab6f504"/>
-                <textElement textAlignment="Right">
-                    <font fontName="Arial" size="18" isBold="true"/>
+                <reportElement x="20" y="30" width="150" height="30" uuid="c90f97af-2b01-4923-9175-b2cf4ab6f504"/>
+                <textElement textAlignment="Center">
+                    <font fontName="DejaVu Sans Mono" size="14" isBold="true"/>
                 </textElement>
                 <text><![CDATA[تاريخ الحادث]]></text>
             </staticText>
             <textField>
-                <reportElement x="90" y="50" width="100" height="30" uuid="f5f7ab42-a97d-4448-8c45-86589ff97286"/>
+                <reportElement x="40" y="64" width="100" height="30" uuid="f5f7ab42-a97d-4448-8c45-86589ff97286"/>
                 <textElement textAlignment="Right">
                     <font fontName="Arial" size="18" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$F{dateaccid}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="215" y="140" width="319" height="30" uuid="2b389e1a-1b44-4137-93f9-dc8364e5193f"/>
+                <reportElement x="215" y="160" width="319" height="30" uuid="2b389e1a-1b44-4137-93f9-dc8364e5193f"/>
                 <box>
                     <topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
                     <leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -141,12 +140,12 @@ u.unite_name]]>
                     <rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
                 </box>
                 <textElement textAlignment="Right" verticalAlignment="Top">
-                    <font fontName="Arial" size="16"/>
+                    <font fontName="DejaVu Sans Mono" size="16"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$F{unite_name}]]></textFieldExpression>
             </textField>
             <staticText>
-                <reportElement x="215" y="102" width="319" height="30" uuid="dd3a5ded-8216-4ef1-81d0-61f6251fc2a6"/>
+                <reportElement x="215" y="122" width="319" height="30" uuid="dd3a5ded-8216-4ef1-81d0-61f6251fc2a6"/>
                 <box>
                     <topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
                     <leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -154,7 +153,7 @@ u.unite_name]]>
                     <rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
                 </box>
                 <textElement textAlignment="Right">
-                    <font fontName="Arial" size="18" isBold="true"/>
+                    <font fontName="DejaVu Sans Mono" size="18" isBold="true"/>
                 </textElement>
                 <text><![CDATA[الوحدة الامنية المتعهدة]]></text>
             </staticText>
